// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RunPanel matches snapshot on msq (auto) query 1`] = `
<div
  class="run-panel"
>
  <button
    class="bp6-button bp6-intent-primary"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-caret-right"
    >
      <svg
        data-icon="caret-right"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 0 0 6 4.5v7a.495.495 0 0 0 .83.37l4-3.5c.1-.09.17-.22.17-.37"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="bp6-button-text"
    >
      Run
    </span>
  </button>
  <div
    class="bp6-button-group"
  >
    <span
      class="bp6-popover-target"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="bp6-button"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Engine: SQL (task)
        </span>
        <span
          aria-hidden="true"
          class="bp6-icon bp6-icon-caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
    <span
      class="max-tasks-button bp6-popover-target"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="bp6-button"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Max tasks: 9 (full cluster capacity)
        </span>
        <span
          aria-hidden="true"
          class="bp6-icon bp6-icon-caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`RunPanel matches snapshot on native (auto) query 1`] = `
<div
  class="run-panel"
>
  <button
    class="bp6-button bp6-intent-primary"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp6-icon bp6-icon-caret-right"
    >
      <svg
        data-icon="caret-right"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 0 0 6 4.5v7a.495.495 0 0 0 .83.37l4-3.5c.1-.09.17-.22.17-.37"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="bp6-button-text"
    >
      Run
    </span>
  </button>
  <div
    class="bp6-button-group"
  >
    <span
      class="bp6-popover-target"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="bp6-button"
        type="button"
      >
        <span
          class="bp6-button-text"
        >
          Engine: Auto [SQL (native)]
        </span>
        <span
          aria-hidden="true"
          class="bp6-icon bp6-icon-caret-down"
        >
          <svg
            data-icon="caret-down"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 0 0-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </div>
</div>
`;
